Issue #1933 Run-ALValidation fails sometimes with single installApps and multiple apps specified
Issue #1931 Throw understandable error when trying to create a pre-15 filesonly container
Issue #1921 Add /GenerateCrossReferences switch from alc.exe to Compile-AppInBcContainer and Run-AlPipeline
Issue #1826 Add additional error info to UploadImportAndApply-ConfigPackageInBcContainer

2.0.12
Issue #1894 Error when creating a new "clean" v18 container
Issue #1900 Code signing (Sign-NavContainerApp) does not work with a SAS URL
Issue #1906 Run-AlPipeline / Compile-AppInBcContainer problem
Unable to install Test Runner in 18.0 online tenant
Issue #1928 latest version of Docker throws an exception when using Docker Build in PowerShell (even though nothing is wrong...!!!)
Add Windows 10 21H1 known version number
Add additional countries to w1 mapping in configuration

2.0.11
Add parameter reUseContainer to Run-AlPipeline to use existing container for the pipeline
Include Tests-Marketing when installing test apps
Add parameter SharedFolder to Run-AlPipeline to share a folder from the host to the container
Allow to Run-AlPipeline without source and only installApps and/or installTestApps
Display Note in Run-AlPipeline and Run-AlValidation if ShowMyCode is true (https://aka.ms/showMyCode)
Add function Add-DomainToTraefikConfig to add a domain to traefik v1 config
Change traefik containers to use ContainerName as hostname
Add config setting TraefikUseDnsNameAsHostName to revert the behavior and use the public DNS name as hostname
Issue #1886 Error creating BC 19 container (Test Runner on Permissions Mock by Microsoft 19.0.0.0)
Issue #1870 Do not remove images currently in use in Flush-BcContainerHelperCache

2.0.10
Issue #1857 Compile-AppInBcContainer doesn't work with 19.0 containers
Issue #1860 Wizard unaware of new license rules for 18.0

2.0.9
Regression in New-BcEnvironment - use of uninitialized variable

2.0.8